--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
   "dependencies": {
     "flux": "^2.1.1",
     "history": "^1.13.1",
+    "humps": "^1.0.0",
+    "keymirror": "^0.1.1",
+    "normalizr": "^1.4.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.2"
+    "react-pure-render": "^1.0.2",
+    "react-router": "^1.0.2",
+    "selectn": "^0.10.0",
+    "underscore": "^1.8.3",
+    "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
