--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://bitbucket.org/nekuno/app#readme",
   "dependencies": {
     "flux": "^2.1.1",
+    "framework7": "^1.4.0",
     "history": "^1.13.1",
     "humps": "^1.0.0",
     "keymirror": "^0.1.1",
@@ -35,9 +36,10 @@
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
-    "gulp-less": "^3.0.5",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
 }
