--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/nekuno/app#readme",
   "dependencies": {
+    "bluebird": "^3.1.1",
     "flux": "^2.1.1",
     "framework7": "^1.4.0",
     "history": "^1.13.1",
     "humps": "^1.0.0",
+    "jwt-decode": "^1.4.0",
     "keymirror": "^0.1.1",
     "normalizr": "^1.4.0",
     "react": "^0.14.3",
+    "react-addons-linked-state-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-mixin": "^3.0.3",
     "react-pure-render": "^1.0.2",
     "react-router": "^1.0.2",
+    "request": "^2.67.0",
     "selectn": "^0.10.0",
     "underscore": "^1.8.3",
     "whatwg-fetch": "^0.10.1"
