--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://bitbucket.org/nekuno/app#readme",
   "dependencies": {
     "bluebird": "^3.1.1",
+    "chart.js": "^1.0.2",
     "flux": "^2.1.1",
     "framework7": "^1.4.0",
     "history": "^1.13.1",
