--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
+    "gulp-uglify": "^1.5.1",
     "vinyl-source-stream": "^1.1.0"
   }
 }
