--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "client",
   "version": "0.2.5",
-  "description": "Nekuno Hybrid Mobile App",
+  "description": "Nekuno Hybrid Mobile Client",
   "main": "index.js",
   "scripts": {
     "test": "echo test"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/nekuno/app.git"
+    "url": "git+ssh://git@bitbucket.org/nekuno/client.git"
   },
   "author": "Nekuno",
   "license": "MIT",
-  "homepage": "https://bitbucket.org/nekuno/app#readme",
+  "homepage": "https://bitbucket.org/nekuno/client#readme",
   "dependencies": {
     "bluebird": "^3.1.1",
     "chart.js": "^1.0.2",
