--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/nekuno/app#readme",
   "dependencies": {
+    "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git",
     "bluebird": "^3.1.1",
     "chart.js": "^1.0.2",
     "flux": "^2.1.1",
