--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^0.14.3",
     "react-addons-linked-state-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-geosuggest": "^1.15.1",
     "react-pure-render": "^1.0.2",
     "react-router": "^1.0.2",
     "request": "^2.67.0",
