--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "react-router": "^1.0.2",
     "request": "^2.67.0",
     "selectn": "^0.10.0",
-    "underscore": "^1.8.3",
-    "whatwg-fetch": "^0.10.1"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.2.0",
