--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-dom": "^0.14.8",
     "react-geosuggest": "^1.20.1",
     "react-pure-render": "^1.0.2",
-    "react-router": "^1.0.2",
+    "react-router": "1.0.2",
     "request": "^2.71.0",
     "selectn": "^0.10.0",
     "underscore": "^1.8.3"
