Use fixed versions

--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
   "homepage": "https://bitbucket.org/nekuno/client#readme",
   "dependencies": {
     "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git",
-    "bluebird": "^3.3.3",
-    "chart.js": "^1.0.2",
-    "flux": "^2.1.1",
-    "framework7": "^1.4.0",
-    "history": "~1.13.1",
-    "invariant": "^2.2.1",
-    "jwt-decode": "^1.4.0",
-    "keymirror": "^0.1.1",
+    "bluebird": "3.3.3",
+    "chart.js": "1.0.2",
+    "flux": "2.1.1",
+    "framework7": "1.4.0",
+    "history": "1.13.1",
+    "invariant": "2.2.1",
+    "jwt-decode": "1.4.0",
+    "keymirror": "0.1.1",
     "moment": "2.11.2",
-    "normalizr": "^1.4.0",
-    "react": "^0.14.8",
-    "react-addons-linked-state-mixin": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-geosuggest": "^1.20.1",
-    "react-pure-render": "^1.0.2",
+    "normalizr": "1.4.0",
+    "react": "0.14.8",
+    "react-addons-linked-state-mixin": "0.14.8",
+    "react-dom": "0.14.8",
+    "react-geosuggest": "1.20.1",
+    "react-pure-render": "1.0.2",
     "react-router": "1.0.2",
-    "request": "^2.71.0",
-    "selectn": "^0.10.0",
-    "underscore": "^1.8.3"
+    "request": "2.72.0",
+    "selectn": "0.10.0",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.0",
