--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "invariant": "2.2.1",
     "jwt-decode": "1.4.0",
     "keymirror": "0.1.1",
-    "moment": "2.11.2",
+    "moment": "2.14.1",
     "normalizr": "1.4.0",
     "rc-progress": "^1.0.4",
-    "react": "15.2.1",
-    "react-dom": "15.2.1",
+    "react": "15.3.1",
+    "react-dom": "15.3.1",
     "react-geosuggest": "1.24.1",
     "react-image-crop": "1.0.0-rc4",
+    "react-infinite-calendar": "^1.1.18",
     "react-pure-render": "1.0.2",
     "react-router": "1.0.2",
     "request": "2.73.0",
