QS-1188: Update bluebird, moment and react

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "homepage": "https://bitbucket.org/nekuno/client#readme",
   "dependencies": {
     "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git",
-    "bluebird": "3.3.3",
+    "bluebird": "3.4.6",
     "chart.js": "1.0.2",
     "flux": "2.1.1",
     "framework7": "1.4.0",
@@ -23,11 +23,11 @@
     "invariant": "2.2.1",
     "jwt-decode": "1.4.0",
     "keymirror": "0.1.1",
-    "moment": "2.14.1",
+    "moment": "2.16.0",
     "normalizr": "1.4.0",
     "rc-progress": "^1.0.4",
-    "react": "15.3.1",
-    "react-dom": "15.3.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-emoji": "^0.4.4",
     "react-emoji-picker": "^1.0.12",
     "react-geosuggest": "1.24.1",
