--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "flux": "2.1.1",
     "framework7": "1.4.0",
     "history": "1.13.1",
-    "invariant": "2.2.1",
+    "invariant": "2.2.2",
     "jwt-decode": "1.4.0",
     "keymirror": "0.1.1",
     "moment": "2.16.0",
     "normalizr": "1.4.0",
     "rc-progress": "^1.0.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-emoji": "^0.4.4",
     "react-emoji-picker": "^1.0.12",
     "react-geosuggest": "1.24.1",
@@ -36,20 +37,20 @@
     "react-joyride": "git+https://github.com/msalsas/react-joyride.git#master",
     "react-pure-render": "1.0.2",
     "react-router": "1.0.2",
-    "request": "2.73.0",
+    "request": "2.79.0",
     "selectn": "0.10.0",
     "underscore": "1.8.3"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.0",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^2.2.0",
     "gulp-html-version": "^1.0.1",
     "gulp-minify-css": "^1.2.3",
