QS-1254: Persist scroll position. Upgrade react-router

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "bluebird": "3.4.6",
     "chart.js": "1.0.2",
     "flux": "2.1.1",
-    "framework7": "1.4.0",
-    "history": "1.13.1",
+    "framework7": "1.5.2",
+    "history": "3.2.0",
     "invariant": "2.2.2",
     "jwt-decode": "1.4.0",
     "keymirror": "0.1.1",
@@ -36,7 +36,8 @@
     "react-infinite-calendar": "^1.1.18",
     "react-joyride": "git+https://github.com/msalsas/react-joyride.git#master",
     "react-pure-render": "1.0.2",
-    "react-router": "1.0.2",
+    "react-router": "3.0.0",
+    "react-router-scroll": "0.4.1",
     "request": "2.79.0",
     "selectn": "0.10.0",
     "underscore": "1.8.3"
