--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
   "scripts": {
     "test": "echo test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@bitbucket.org/nekuno/client.git"
-  },
   "author": "Nekuno",
-  "license": "MIT",
-  "homepage": "https://bitbucket.org/nekuno/client#readme",
+  "license": "AGPL-3.0",
+  "homepage": "https://github.com/nekuno/client#readme",
   "dependencies": {
     "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git",
     "bluebird": "3.4.6",
