--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,58 @@
 {
 	"name": "Nekuno",
+	"short_name": "Nekuno",
+	"start_url": "\/#\/",
+	"scope": "\/#\/",
+	"background_color": "#151232",
+	"lang": "en-US",
+	"description": "Nekuno brings you closer to the future you’ve always wanted, because it understands you and knows about everything everywhere thanks to the Internet.",
 	"icons": [
+		{
+			"src": "favicon.png",
+			"sizes": "36x36",
+			"type": "image/png"
+		},
+		{
+			"src": "favicon.png",
+			"sizes": "48x48",
+			"type": "image/png"
+		},
+		{
+			"src": "android-chrome-72x72.png",
+			"sizes": "72x72",
+			"type": "image/png"
+		},
+		{
+			"src": "android-chrome-96x96.png",
+			"sizes": "96x96",
+			"type": "image/png"
+		},
+		{
+			"src": "android-chrome-128x128.png",
+			"sizes": "128x128",
+			"type": "image\/png"
+		},
+		{
+			"src": "android-chrome-144x144.png",
+			"sizes": "144x144",
+			"type": "image/png"
+		},
 		{
 			"src": "android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image\/png"
 		}
 	],
-	"theme_color": "#ffffff",
-	"display": "standalone"
+	"theme_color": "#151232",
+	"display": "standalone",
+	"orientation": "portrait",
+	"related_applications": [
+		{
+			"platform": "play",
+			"url": "https:\/\/play.google.com\/store\/apps\/details?id=com.nekuno",
+			"id": "com.nekuno"
+		}, {
+			"platform": "itunes",
+			"url": ""
+		}]
 }
