--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-image-crop": "1.0.0-rc4",
     "react-infinite-calendar": "^1.1.18",
     "react-joyride": "git+https://github.com/msalsas/react-joyride.git#master",
+    "react-motion": "0.4.7",
     "react-pure-render": "1.0.2",
     "react-router": "3.0.0",
     "react-router-scroll": "0.4.1",
