QS-1247: Add service worker and push notifications

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,7 @@
 	"name": "Nekuno",
 	"short_name": "Nekuno",
 	"start_url": "\/#\/",
+	"gcm_sender_id": "103953800507",
 	"scope": "\/#\/",
 	"background_color": "#151232",
 	"lang": "en-US",
