--- a/package.json
+++ b/package.json
@@ -1,61 +1,99 @@
 {
-  "name": "client",
-  "version": "0.32.0",
-  "description": "Nekuno Hybrid Mobile Client",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo test"
-  },
-  "author": "Nekuno",
-  "license": "AGPL-3.0",
-  "homepage": "https://github.com/nekuno/client#readme",
-  "dependencies": {
-    "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git",
-    "bluebird": "3.4.6",
-    "chart.js": "1.0.2",
-    "flux": "2.1.1",
-    "framework7": "1.5.2",
-    "history": "3.2.0",
-    "invariant": "2.2.2",
-    "json-prune": "1.0.1",
-    "jwt-decode": "1.4.0",
-    "keymirror": "0.1.1",
-    "moment": "2.17.1",
-    "normalizr": "1.4.0",
-    "rc-progress": "2.0.3",
-    "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-emoji": "^0.4.4",
-    "react-emoji-picker": "^1.0.12",
-    "react-geosuggest": "1.24.1",
-    "react-image-crop": "1.0.0-rc4",
-    "react-infinite-calendar": "^1.1.18",
-    "react-joyride": "git+https://github.com/msalsas/react-joyride.git#master",
-    "react-motion": "0.4.7",
-    "react-pure-render": "1.0.2",
-    "react-router": "3.0.0",
-    "react-router-scroll": "0.4.1",
-    "request": "2.79.0",
-    "selectn": "0.10.0",
-    "underscore": "1.8.3"
-  },
-  "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^2.2.0",
-    "gulp-html-version": "^1.0.1",
-    "gulp-minify-css": "^1.2.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1",
-    "vinyl-source-stream": "^1.1.0"
-  }
+    "name": "client",
+    "version": "0.32.0",
+    "description": "Nekuno Hybrid Mobile Client",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo test"
+    },
+    "author": "Nekuno",
+    "license": "AGPL-3.0",
+    "homepage": "https://github.com/nekuno/client#readme",
+    "dependencies": {
+        "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git",
+        "bluebird": "3.4.6",
+        "chart.js": "1.0.2",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-crosswalk-webview": "^2.3.0",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-facebook4": "^1.7.4",
+        "cordova-plugin-google-analytics": "^1.7.11",
+        "cordova-plugin-inappbrowser": "^1.3.0",
+        "cordova-plugin-splashscreen": "^3.2.2",
+        "cordova-plugin-whitelist": "^1.2.2",
+        "cordova-plugin-x-socialsharing": "^5.1.8",
+        "es6-promise-plugin": "file:node_modules/es6-promise-plugin",
+        "flux": "2.1.1",
+        "framework7": "1.5.2",
+        "history": "3.2.0",
+        "invariant": "2.2.2",
+        "json-prune": "1.0.1",
+        "jwt-decode": "1.4.0",
+        "keymirror": "0.1.1",
+        "moment": "2.17.1",
+        "normalizr": "1.4.0",
+        "phonegap-plugin-push": "^1.10.4",
+        "rc-progress": "2.0.3",
+        "react": "^15.4.1",
+        "react-addons-css-transition-group": "^15.4.1",
+        "react-dom": "^15.4.1",
+        "react-emoji": "^0.4.4",
+        "react-emoji-picker": "^1.0.12",
+        "react-geosuggest": "1.24.1",
+        "react-image-crop": "1.0.0-rc4",
+        "react-infinite-calendar": "^1.1.18",
+        "react-joyride": "git+https://github.com/msalsas/react-joyride.git#master",
+        "react-motion": "0.4.7",
+        "react-pure-render": "1.0.2",
+        "react-router": "3.0.0",
+        "react-router-scroll": "0.4.1",
+        "request": "2.79.0",
+        "selectn": "0.10.0",
+        "underscore": "1.8.3"
+    },
+    "devDependencies": {
+        "babel-plugin-transform-decorators-legacy": "^1.3.0",
+        "babel-polyfill": "^6.20.0",
+        "babel-preset-es2015": "^6.18.0",
+        "babel-preset-react": "^6.16.0",
+        "babel-preset-stage-0": "^6.16.0",
+        "babelify": "^7.3.0",
+        "browserify": "^13.1.1",
+        "gulp": "^3.9.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-connect": "^2.2.0",
+        "gulp-html-version": "^1.0.1",
+        "gulp-minify-css": "^1.2.3",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^2.1.1",
+        "gulp-uglify": "^1.5.1",
+        "vinyl-source-stream": "^1.1.0"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-crosswalk-webview": {
+                "XWALK_VERSION": "23+",
+                "XWALK_LITEVERSION": "xwalk_core_library_canary:17+",
+                "XWALK_COMMANDLINE": "--disable-pull-to-refresh-effect",
+                "XWALK_MODE": "embedded",
+                "XWALK_MULTIPLEAPK": "true"
+            },
+            "cordova-plugin-device": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "900844543277969",
+                "APP_NAME": "fornekuno"
+            },
+            "cordova-plugin-google-analytics": {},
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-x-socialsharing": {},
+            "phonegap-plugin-push": {
+                "SENDER_ID": "345837503310"
+            }
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
