--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "bluebird": "3.4.6",
         "chart.js": "1.0.2",
         "cordova-android": "^6.2.3",
-        "cordova-plugin-app-event": "file:node_modules/cordova-plugin-app-event",
+        "cordova-plugin-app-event": "^1.2.0",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-facebook4": "~1.7.4",
