Add supports share and apple store url to manifest.json

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -54,6 +54,7 @@
 			"id": "com.nekuno"
 		}, {
 			"platform": "itunes",
-			"url": ""
-		}]
+			"url": "https:\/\/itunes.apple.com\/us\/app\/nekuno\/id1220091640"
+		}],
+	"supports_share": true
 }
