--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bluebird": "3.4.6",
         "chart.js": "1.0.2",
         "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-app-event": "^1.2.0",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
         "cordova-plugin-device": "^1.1.6",
@@ -98,7 +99,8 @@
             "de.appplant.cordova.plugin.local-notification": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
