--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "create-react-class": "^15.5.0",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "envify": "^4.0.0",
-        "es6-promise-plugin": "file://node_modules/es6-promise-plugin",
+        "es6-promise-plugin": "^4.1.0",
         "flux": "2.1.1",
         "framework7": "1.5.2",
         "history": "3.2.0",
