--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
         "gulp-rename": "^1.2.2",
         "gulp-sass": "^2.1.1",
         "gulp-uglify": "^1.5.1",
-        "vinyl-source-stream": "^1.1.0"
+        "vinyl-source-stream": "^1.1.0",
+        "run-sequence": "^2.0.0"
     },
     "cordova": {
         "plugins": {
