--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "react-dom": "^15.5.4",
         "react-emojione": "3.1.10",
         "react-geosuggest": "1.24.1",
-        "react-image-crop": "1.0.0-rc4",
+        "react-image-crop": "2.0.5",
         "react-infinite": "^0.11.0",
         "react-infinite-calendar": "^2.3.1",
         "react-joyride": "git+https://github.com/msalsas/react-joyride.git#master",
