--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-plugin-x-socialsharing": "^5.1.8",
         "create-react-class": "^15.5.0",
+        "crypto": "^1.0.1",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "envify": "^4.0.0",
-        "crypto": "^1.0.1",
         "es6-promise-plugin": "^4.1.0",
         "flux": "2.1.1",
         "framework7": "1.5.2",
+        "hellojs": "1.15.1",
         "history": "3.2.0",
         "invariant": "2.2.2",
         "json-prune": "1.0.1",
@@ -57,6 +58,7 @@
         "react-router-scroll": "0.4.1",
         "request": "2.79.0",
         "selectn": "0.10.0",
+        "socket.io-client": "2.0.4",
         "underscore": "1.8.3"
     },
     "devDependencies": {
