--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "react-pure-render": "1.0.2",
         "react-router": "3.0.0",
         "react-router-scroll": "0.4.1",
+        "react-slick": "0.16.0",
         "request": "2.79.0",
         "selectn": "0.10.0",
         "socket.io-client": "2.0.4",
