--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-image-crop": "2.0.5",
     "react-infinite": "^0.12.1",
     "react-infinite-calendar": "^2.3.1",
-    "react-joyride": "git+https://github.com/msalsas/react-joyride.git#master",
+    "react-joyride": "git+https://github.com/msalsas/react-joyride.git#1.12.0",
     "react-motion": "0.4.7",
     "react-pure-render": "1.0.2",
     "react-recaptcha": "2.3.6",
