Update to React 16.2.0

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "AGPL-3.0",
   "homepage": "https://github.com/nekuno/client#readme",
   "dependencies": {
-    "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git",
+    "Framework7-3D-Panels": "git+https://github.com/nolimits4web/Framework7-3D-Panels.git#b850e165ad13babe88389b741920660f9900e459",
     "bluebird": "3.4.6",
     "chart.js": "1.0.2",
     "cordova-android": "^6.2.3",
@@ -25,7 +25,6 @@
     "cordova-plugin-splashscreen": "^3.2.2",
     "cordova-plugin-whitelist": "^1.3.2",
     "cordova-plugin-x-socialsharing": "^5.1.8",
-    "create-react-class": "^15.5.0",
     "crypto": "^1.0.1",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "envify": "^4.0.0",
@@ -41,15 +40,14 @@
     "moment": "2.17.1",
     "normalizr": "1.4.0",
     "phonegap-plugin-push": "^1.10.5",
-    "prop-types": "^15.5.10",
+    "prop-types": "15.6.1",
     "rc-progress": "2.2.5",
     "rc-slider": "8.6.0",
-    "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-dom": "^15.5.4",
-    "react-emojione": "3.1.10",
-    "react-geosuggest": "2.3.6",
-    "react-image-crop": "2.0.5",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-emojione": "5.0.0",
+    "react-geosuggest": "2.7.0",
+    "react-image-crop": "3.0.10",
     "react-infinite": "^0.12.1",
     "react-infinite-calendar": "^2.3.1",
     "react-joyride": "git+https://github.com/msalsas/react-joyride.git#1.12.0",
