--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "react-slick": "0.16.0",
     "request": "2.79.0",
     "selectn": "0.10.0",
-    "socket.io-client": "2.0.4",
-    "underscore": "1.8.3"
+    "socket.io-client": "2.0.4"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.0",
