--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "cordova-plugin-splashscreen": "^3.2.2",
     "cordova-plugin-whitelist": "^1.3.2",
     "cordova-plugin-x-socialsharing": "^5.1.8",
-    "crypto": "^1.0.1",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "envify": "^4.0.0",
     "es6-promise-plugin": "^4.1.0",
@@ -62,23 +61,24 @@
     "socket.io-client": "2.0.4"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "gulp": "^3.9.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^16.1.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.3",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "^2.2.0",
+    "gulp-connect": "^5.5.0",
     "gulp-html-version": "^1.0.1",
-    "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1",
-    "vinyl-source-stream": "^1.1.0",
-    "run-sequence": "^2.0.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "run-sequence": "^2.2.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "cordova": {
     "plugins": {
