--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "react-emojione": "5.0.0",
         "react-geosuggest": "2.7.0",
         "react-image-crop": "3.0.10",
-        "react-infinite": "^0.12.1",
+        "react-infinite": "0.13.0",
         "react-infinite-calendar": "^2.3.1",
         "react-joyride": "git+https://github.com/msalsas/react-joyride.git#1.12.0",
         "react-motion": "0.5.2",
