QS-1563: Replace gulp with webpack, add jest and new Banner component as example

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
-  "presets": ["env", "react", "stage-0"],
-  "plugins": ["babel-plugin-transform-decorators-legacy"]
+  "env": {
+    "test": {
+      "presets": ["env", "react", "stage-0"],
+      "plugins": ["transform-decorators-legacy"],
+      "only": [
+        "./**/*.js",
+        "node_modules/jest-runtime"
+      ]
+    }
+  }
 }
