--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
     "name": "client",
     "version": "1.0.1",
     "description": "Nekuno Hybrid Mobile Client",
+    "private": true,
     "main": "index.js",
     "scripts": {
-        "test": "echo test"
+        "test": "jest",
+        "storybook": "start-storybook -p 9001 -c .storybook",
+        "build": "webpack --config webpack.config.dev.js",
+        "build:prod": "webpack --config webpack.config.js"
     },
     "author": "Nekuno",
     "license": "AGPL-3.0",
@@ -36,7 +40,7 @@
         "json-prune": "1.0.1",
         "jwt-decode": "1.4.0",
         "keymirror": "0.1.1",
-        "moment": "2.17.1",
+        "moment": "^2.22.2",
         "normalizr": "1.4.0",
         "phonegap-plugin-push": "^1.10.5",
         "prop-types": "15.6.1",
@@ -56,27 +60,40 @@
         "react-router": "3.2.1",
         "react-router-scroll": "0.4.4",
         "react-slick": "0.16.0",
-        "request": "2.79.0",
+        "request": "^2.87.0",
         "selectn": "0.10.0",
-        "socket.io-client": "2.0.4"
+        "socket.io-client": "2.1.1"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "@storybook/addon-actions": "^4.0.0-alpha.14",
+        "@storybook/addons": "^4.0.0-alpha.14",
+        "@storybook/react": "^4.0.0-alpha.14",
+        "babel-core": "^6.26.3",
+        "babel-jest": "^23.4.0",
+        "babel-loader": "^7.1.5",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "babelify": "^8.0.0",
         "browserify": "^16.1.0",
-        "gulp": "^4.0.0",
-        "gulp-clean-css": "^3.9.3",
-        "gulp-concat": "^2.6.1",
-        "gulp-connect": "5.0.0",
-        "gulp-html-version": "^1.0.1",
-        "gulp-sass": "^3.1.0",
-        "gulp-uglify": "^3.0.0",
-        "vinyl-source-stream": "^2.0.0"
+        "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
+        "enzyme": "^3.3.0",
+        "file-loader": "^1.1.11",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^23.4.1",
+        "jest-transform-stub": "^1.0.0",
+        "mini-css-extract-plugin": "^0.4.1",
+        "node-sass": "^4.9.2",
+        "optimize-css-assets-webpack-plugin": "^4.0.0",
+        "react-test-renderer": "^16.4.1",
+        "sass-loader": "^7.0.3",
+        "style-loader": "^0.21.0",
+        "vinyl-source-stream": "^2.0.0",
+        "webpack": "^4.16.1",
+        "webpack-cli": "^3.1.0"
     },
     "cordova": {
         "plugins": {
