--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     },
     "devDependencies": {
         "@storybook/addon-actions": "^4.0.0-alpha.14",
+        "@storybook/addon-links": "^4.0.0-alpha.14",
         "@storybook/addons": "^4.0.0-alpha.14",
         "@storybook/react": "^4.0.0-alpha.14",
         "babel-core": "^6.26.3",
