--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "test": "jest",
         "storybook": "start-storybook -p 9001 -c .storybook",
         "build": "webpack --config webpack.config.dev.js",
-        "build:prod": "webpack --config webpack.config.js"
+        "build:prod": "webpack --config webpack.config.js",
+        "create-component": "node ./bin/create-component.js && npm run test && npm run storybook"
     },
     "author": "Nekuno",
     "license": "AGPL-3.0",
