--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-router": "3.2.1",
         "react-router-scroll": "0.4.4",
         "react-slick": "0.16.0",
+        "react-tabs": "2.2.2",
         "request": "^2.87.0",
         "selectn": "0.10.0",
         "socket.io-client": "2.1.1"
