--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "file-loader": "^1.1.11",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^23.4.1",
+        "jest-localstorage-mock": "^2.2.0",
         "jest-transform-stub": "^1.0.0",
         "mini-css-extract-plugin": "^0.4.1",
         "node-sass": "^4.9.2",
