--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
         "react-router": "3.2.1",
         "react-router-scroll": "0.4.4",
         "react-slick": "0.16.0",
+        "react-swipe": "^6.0.3",
         "react-tabs": "2.2.2",
         "request": "^2.87.0",
         "selectn": "0.10.0",
-        "socket.io-client": "2.1.1"
+        "socket.io-client": "2.1.1",
+        "swipe-js-iso": "^2.1.4"
     },
     "devDependencies": {
         "@storybook/addon-actions": "^4.0.0-alpha.14",
