--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "Nekuno Hybrid Mobile Client",
     "main": "index.js",
     "scripts": {
+        "start:dev": "gulp dev",
+        "build": "gulp build",
         "test": "echo test"
     },
     "author": "Nekuno",
