--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "1.1.0",
     "description": "Nekuno Hybrid Mobile Client",
     "main": "index.js",
+    "private": true,
     "scripts": {
         "start:dev": "gulp dev",
-        "build": "gulp build",
+        "build:dev": "webpack --config webpack.config.dev.js",
+        "build:prod": "webpack --config webpack.config.js",
         "test": "echo test"
     },
     "author": "Nekuno",
@@ -27,6 +29,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-plugin-x-socialsharing": "^5.1.8",
+        "date-fns": "^1.30.1",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "envify": "^4.0.0",
         "es6-promise-plugin": "^4.1.0",
@@ -58,27 +61,34 @@
         "react-router": "3.2.1",
         "react-router-scroll": "0.4.4",
         "react-slick": "0.16.0",
-        "request": "2.79.0",
+        "react-swipe": "^6.0.3",
+        "react-tabs": "2.2.2",
+        "request": "^2.87.0",
         "selectn": "0.10.0",
-        "socket.io-client": "2.0.4"
+        "socket.io-client": "2.1.1",
+        "swipe-js-iso": "^2.1.4"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "babelify": "^8.0.0",
         "browserify": "^16.1.0",
-        "gulp": "^4.0.0",
-        "gulp-clean-css": "^3.9.3",
-        "gulp-concat": "^2.6.1",
-        "gulp-connect": "5.0.0",
-        "gulp-html-version": "^1.0.1",
-        "gulp-sass": "^3.1.0",
-        "gulp-uglify": "^3.0.0",
-        "vinyl-source-stream": "^2.0.0"
+        "copy-webpack-plugin": "^5.0.3",
+        "css-loader": "^2.1.1",
+        "file-loader": "^3.0.1",
+        "mini-css-extract-plugin": "^0.7.0",
+        "node-sass": "^4.12.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "uglifyjs-webpack-plugin": "^2.1.3",
+        "webpack": "^4.32.2",
+        "webpack-cli": "^3.3.2"
     },
     "cordova": {
         "plugins": {
