--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
+        "babel-eslint": "^10.0.1",
         "babel-loader": "^7.1.5",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-polyfill": "^6.26.0",
@@ -80,6 +81,8 @@
         "browserify": "^16.1.0",
         "copy-webpack-plugin": "^5.0.3",
         "css-loader": "^2.1.1",
+        "eslint": "^5.16.0",
+        "eslint-plugin-react": "^7.13.0",
         "file-loader": "^3.0.1",
         "mini-css-extract-plugin": "^0.7.0",
         "node-sass": "^4.12.0",
